--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -36,6 +36,13 @@
 <% end %>
 
 <% content_for :sidebar do %>
+  <% if signed_in?%>
+    <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin" } %>
+      <div align="center">
+        <%= button_to 'New News Item', new_news_path, :method => "GET" %>
+      </div>
+    <% end %>
+  <% end %>
   <%= render "sidebars/newsletter_signup" %>
 <% end %>
 
