--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -40,7 +40,11 @@
     <td><%= member.user.email %></td>
     <td><%= member.caf_join_date %></td>
     <td><% if !member.dues_payments.last.nil? %>
-    <%= member.dues_payments.last.date_paid %>
+    <% if member.dues_payments.last.date_paid < (Date.today - 1.year) %>
+      <span class="error"><%= member.dues_payments.last.date_paid %></span>
+    <% else %>
+      <%= member.dues_payments.last.date_paid %>
+    <% end %>
     <% end %>
     </td>
 
