adding sort functionality to members view

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -20,12 +20,12 @@
 
 <table class="table_border">
   <tr>
-    <th style="min-width: 60px;">Col No.</th>
-    <th style="min-width: 150px;">Name</th>
-    <th style="min-width: 150px;">Location</th>
-    <th style="max-width: 150px;">Email</th>
-    <th style="min-width: 90px;">CAF Join Date</th>
-    <th style="min-width: 90px;">Last Dues Paid</th>
+    <th style="min-width: 60px;"><%= sortable 'caf_col_no', 'Col No.' %></th>
+    <th style="min-width: 150px;"><%= sortable 'last_name,first_name', 'Name' %></th>
+    <th style="min-width: 150px;"><%= sortable 'city, state', 'Location' %></th>
+    <th style="max-width: 150px;"><%= sortable 'email' %></th>
+    <th style="min-width: 90px;"><%= sortable 'caf_join_date', 'CAF Join Date' %></th>
+    <th style="min-width: 90px;"><%= sortable 'date_paid', 'Last Dues Paid'  %></th>
   </tr>
 
 <% @active_members.each do |member| %>
