--- a/app/views/roster_notifier/created.text.erb
+++ b/app/views/roster_notifier/created.text.erb
@@ -1,6 +1,5 @@
 <%= @event_signup.member.first_name %>, 
 
-
 Your <%= @event_signup.event.title %> Sign Up has been recorded on the website.
 
 <%= @event_signup.event.title %>
@@ -11,6 +10,30 @@ Your <%= @event_signup.event.title %> Sign Up has been recorded on the website.
 <% end %>
 Commitment Level: <%= @event_signup.commitment_level %>
 
-If you need to make a change to your commitment level or cancel, return to the <%= 'http://www.devildogsquadron.com' + event_path(@event_signup.event) %> and make your change.
+<% if !@event_signup.event.trip.nil? %>
+
+The following trip information for has been recorded on the website.
+
+- Crew Arrival: <%= @event_signup.event.trip.crew_arrival.strftime("%H:%M - %b %d, %Y") %>
+- Tug Time: <%= @event_signup.event.trip.tug_time.strftime("%H:%M - %b %d, %Y") %>
+- Wheels up: <%= @event_signup.event.trip.wheels_up.strftime("%H:%M - %b %d, %Y") %>
+- Destination ETA: <%= @event_signup.event.trip.destination_eta.strftime("%H:%M - %b %d, %Y") %>
+- Return ETA: <%= @event_signup.event.trip.return_eta.strftime("%H:%M - %b %d, %Y") %>
+- Distance (nm): <%= @event_signup.event.trip.event.location.one_way_distance %> | ~<%= (@event_signup.event.trip.event.location.one_way_distance.to_f/185).round(1) %> hours
+
+Notes:
+<%= @event_signup.event.trip.notes %>
+
+Current Roster:
+<% @event_signup.event.event_signups.ordered.each do |event_signup| %>
+  - <%= event_signup.member.last_name %>, <%= event_signup.member.first_name %> | <%= event_signup.commitment_level %>
+<% end %>
+<% else %>
+
+You will be notified of schedule information as it becomes available for this trip.
+<% end %>
+<% end %>
+
+If you need to make a change to your commitment level or cancel, return to <%= 'http://www.devildogsquadron.com' + event_path(@event_signup.event) %> and make your change.
 
 Devil Dog Squadron
