--- a/app/views/roster_notifier/created.html.erb
+++ b/app/views/roster_notifier/created.html.erb
@@ -41,10 +41,10 @@
   </tr>
   <tr style="background: #feffea;">
     <td style="border-bottom: #d6d68b;border-right: #d6d68b;border-width: 0 1px 1px 0;border-style: none solid solid none;padding: 3px;vertical-align: top;">Distance (nm):</td>
-    <td style="border-bottom: #d6d68b;border-right: #d6d68b;border-width: 0 1px 1px 0;border-style: none solid solid none;padding: 3px;vertical-align: top;"><strong><%= @event_signup.event.trip.event.location.one_way_distance %> ~<%= (@event_signup.event.trip.event.location.one_way_distance.to_f/185).round(1) %> hours</strong></td>
+    <td style="border-bottom: #d6d68b;border-right: #d6d68b;border-width: 0 1px 1px 0;border-style: none solid solid none;padding: 3px;vertical-align: top;"><strong><%= @event_signup.event.trip.event.location.one_way_distance %> ~ <%= (@event_signup.event.trip.event.location.one_way_distance.to_f/185).round(1) %> hours</strong></td>
   </tr>
   <tr style="background: #fff;">
-    <td style="border-bottom: #d6d68b;border-right: #d6d68b;border-width: 0 1px 1px 0;border-style: none solid solid none;padding: 3px;vertical-align: top;">Notes ETA:</td>
+    <td style="border-bottom: #d6d68b;border-right: #d6d68b;border-width: 0 1px 1px 0;border-style: none solid solid none;padding: 3px;vertical-align: top;">Notes:</td>
     <td style="border-bottom: #d6d68b;border-right: #d6d68b;border-width: 0 1px 1px 0;border-style: none solid solid none;padding: 3px;vertical-align: top;"><%= @event_signup.event.trip.notes %></td>
   </tr>
 </table>
@@ -52,7 +52,7 @@
 <p style="font-size: 14pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Current Roster:</p>
 <ul style="font-size: 14pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">
 <% @event_signup.event.event_signups.ordered.each do |event_signup| %>
-  <li><%= event_signup.member.last_name %>, <%= event_signup.member.first_name %> | <%= event_signup.commitment_level %></li>
+  <li><%= event_signup.member.last_name %>, <%= event_signup.member.first_name %> =&gt; <%= event_signup.commitment_level %></li>
 <% end %>
 </ul>
 <% else %>
