added html version to trip creation notification

--- a/app/views/trip_info_notifier/created.text.erb
+++ b/app/views/trip_info_notifier/created.text.erb
@@ -1,4 +1,4 @@
-The following trip information for <%= @trip.event.title %> has been recorded on the website.
+The following trip information for <%= @trip.event.title %> has been published on the website for this trip.
 
 Crew Arrival: <%= @trip.crew_arrival.strftime("%H:%M - %b %d, %Y") %>
 
