--- a/app/views/roster_notifier/created.html.erb
+++ b/app/views/roster_notifier/created.html.erb
@@ -15,12 +15,13 @@
 
 <p style="font-size: 14pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">The following schedule information is available for this trip.</p>
 
+<div style="max-width:600px">
 <table style="margin-left: 20px;border: solid #333;border-width: thin;border-collapse: separate;border-spacing: 0px;font-size: 14pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">
   <tr>
     <th colspan=2 style="text-align: left;background: #52782a;color: #fff;border-bottom: #CCC;border-width: 0 0 1px 0;border-style: none none solid none;padding: 3px;" >Trip Details:</th>
   </tr>
   <tr style="background: #fff;">
-    <td style="border-bottom: #d6d68b;border-right: #d6d68b;border-width: 0 1px 1px 0;border-style: none solid solid none;padding: 3px;vertical-align: top;">Crew Arrival:</td>
+    <td width="150px" style="border-bottom: #d6d68b;border-right: #d6d68b;border-width: 0 1px 1px 0;border-style: none solid solid none;padding: 3px;vertical-align: top;">Crew Arrival:</td>
     <td style="border-bottom: #d6d68b;border-right: #d6d68b;border-width: 0 1px 1px 0;border-style: none solid solid none;padding: 3px;vertical-align: top;"><strong><%= @event_signup.event.trip.crew_arrival.strftime("%H:%M - %b %d, %Y") %></strong></td>
   </tr>
   <tr style="background: #feffea;">
@@ -48,7 +49,7 @@
     <td style="border-bottom: #d6d68b;border-right: #d6d68b;border-width: 0 1px 1px 0;border-style: none solid solid none;padding: 3px;vertical-align: top;"><%= @event_signup.event.trip.notes %></td>
   </tr>
 </table>
-
+</div>
 <p style="font-size: 14pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Current Roster:</p>
 <ul style="font-size: 14pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">
 <% @event_signup.event.event_signups.ordered.each do |event_signup| %>
