fixed typo updates to notifier formatting

--- a/app/views/trip_info_notifier/created.text.erb
+++ b/app/views/trip_info_notifier/created.text.erb
@@ -1,4 +1,4 @@
-The following trip information for <%= @trip.event.title %> has been published on the website for this trip.
+The following schedule information has been published on the website for the <%= @trip.event.title %> in <%= @trip.event.location.city + ', ' + @trip.event.location.state %> flight.
 
 Crew Arrival: <%= @trip.crew_arrival.strftime("%H:%M - %b %d, %Y") %>
 
