--- a/app/views/pages/member_home.html.erb
+++ b/app/views/pages/member_home.html.erb
@@ -21,16 +21,21 @@ No upcoming trips currently scheduled.
 <% end %>
 
 <h2>Trip History:</h2>
-
-<% @member.event_signups.reverse.each do |sign_up| %>
+<ol>
+<% @member.event_signups.trips.reverse.each do |sign_up| %>
+    
     <% if sign_up.commitment_level == "Definite" %>
+
     <% if sign_up.event.start < Time.zone.now %>
+
         <% if !sign_up.event.location.one_way_distance.blank? %>
             <% total_traveled = (sign_up.event.location.one_way_distance * 2) + total_traveled %>
         <% end %>
-        <%= link_to sign_up.event.title, event_path(sign_up.event) %> | <%= sign_up.event.start.strftime("%b %d, %Y") %><br />
-    <% end %>
-    <% end %>
-<% end %>
+        <li><%= link_to sign_up.event.title, event_path(sign_up.event) %> | <%= sign_up.event.start.strftime("%b %d, %Y") %></li>
 
+    <% end %>
+    <% end %>
+    
+<% end %>
+</ol>
 <p>Total Traveled: <strong><%= number_with_delimiter(total_traveled) %> nm</strong></p>
