--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   <%= favicon_link_tag '/favicon-32x32.png', :rel => 'icon', :type => 'image/png', :sizes => '32x32' %>
   <%= favicon_link_tag '/favicon-96x96.png', :rel => 'icon', :type => 'image/png', :sizes => '96x96' %>
   <%= favicon_link_tag '/favicon-16x16.png', :rel => 'icon', :type => 'image/png', :sizes => '16x16' %>
-
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
 
