--- a/app/views/roster_notifier/change.html.erb
+++ b/app/views/roster_notifier/change.html.erb
@@ -4,7 +4,7 @@
 
 <p style="font-size: 14pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;"><%= @event_signup.member.first_name %>, </p>
 
-<p style="font-size: 14pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Your <%= @event_signup.event.title %> trip sign up has been recorded on the website.</p>
+<p style="font-size: 14pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Your commitment level change to <strong><%= @event_signup.commitment_level %></strong> for the <%= @event_signup.event.title %> trip has been recorded on the website.</p>
 
 <div style="margin-left: 20px;">
 <p style="font-size: 14pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Event: <strong><%= @event_signup.event.title %></strong></p>
