--- a/app/views/event_signups/frequent_flyer_detail.html.erb
+++ b/app/views/event_signups/frequent_flyer_detail.html.erb
@@ -11,7 +11,7 @@
   <th>Date</th>
   <th>N. Miles</th>
 </tr>
-<% @member.event_signups.trips.reverse.each do |sign_up| %>
+<% @member.event_signups.trips.trips_ordered.reverse.each do |sign_up| %>
     
     <% if sign_up.commitment_level == "Definite" %>
 
