added markdown to trip notes

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -163,7 +163,7 @@
   </tr>
   <tr class="even_row">
     <td>Notes:</td>
-    <td><%= @event.trip.notes %></td>
+    <td><%= markdown @event.trip.notes %></td>
   </tr>
 </table>
 <% else %>
