added markdown to view of trip notes

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -36,7 +36,7 @@
   </tr>
   <tr>
     <td>Notes:</td>
-    <td><%= @trip.notes %></td>
+    <td><%= markdown @trip.notes %></td>
   </tr>
 </table>
 
