--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -396,6 +396,10 @@ table {
 	vertical-align: top; 
 	}
 
+.table_border td p {
+margin-top: 0;
+}
+
 .white_row { 
     background: #fff; 
 	border-bottom: #d6d68b;
