--- a/app/views/products/px.html.erb
+++ b/app/views/products/px.html.erb
@@ -26,7 +26,7 @@
            <%= image_tag 'sm_' + product.photo_path %>
 
 <% product.product_photos.each do |product_photo| %>
-	<%= link_to image_tag(product_photo.image_url, :size => "25x25", :class => 'thumb'),'assets/' + product_photo.image_url, :data => {:lightbox, 'image-' + product.id.to_s} %>
+	<%= link_to image_tag(product_photo.image_url, :size => "25x25", :class => 'thumb'),'assets/' + product_photo.image_url, :data => {:lightbox => 'image-' + product.id.to_s} %>
 <% end %>
 
 
