adding flights purchase functionality

--- a/app/views/pages/admin_home.html.erb
+++ b/app/views/pages/admin_home.html.erb
@@ -46,6 +46,12 @@
     List of signups for LFHE Rides
   </div>
 </div>
+<div class="row padded">
+  <div class="cell" style="width: 30%;">
+    <%= button_to "Aircraft", aircrafts_path, :method => :get %>
+    Edit/Admin Aircraft
+  </div>
+</div>
 
 <h2>Website Stuff</h2>
 <div class="row padded">
